tests/ui/inline-const/pat-match-fndef.stderr
error: `fn() {uwu}` cannot be used in patterns
  --> $DIR/pat-match-fndef.rs:8:9
   |
LL |         const { uwu } => {}
   |         ^^^^^^^^^^^^^

error: aborting due to 1 previous error

